# brotab

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Dockerfile.integration  INTEGRATION.md  Makefile  PRIVACY.md  README.md  flake.nix  jess.Dockerfile  justfile  pyproject.toml  setup.py  startup.sh  test_build_install_run.sh
.github/: dependabot.yml
.github/workflows/: pin-release-assets.yaml  pypi.yaml  pythonapp.yml  pythonbuildandrun.yml  release.yaml
artifacts/firefox/: amo-metadata.json  bruvtab_mediator@example.org.xpi
assets/firefox/: amo-metadata.json
brotab/: main.py
brotab/extension/: background.js
brotab/extension/chrome/: background.js  manifest.json  offscreen.html  offscreen.js
brotab/extension/firefox/: background.js  manifest.json
brotab/mediator/: chromium_mediator.json
bruvtab/: api.py  env.py  inout.py  main.py  operations.py  parallel.py  platform.py  ui.py
bruvtab/albert/: bruvtab_search.py
bruvtab/extension/: background.js
bruvtab/extension/chrome/: background.js  manifest.json
bruvtab/extension/firefox/: background.js  manifest.json
bruvtab/mediator/: Makefile  bruvtab_mediator.py  chromium_mediator.json  chromium_mediator_tests.json  const.py  firefox_mediator.json  http_server.py  log.py  remote_api.py  runner.py  sig.py  transport.py
bruvtab/search/: index.py  query.py
bruvtab/tests/: test_brotab.py  test_inout.py  test_integration.py  test_main.py  test_utils.py
bruvtab/tests/integration/: Dockerfile
requirements/: base.txt
scripts/: generate-chrome-update-manifest.sh  package-browser-artifacts.sh  package-chrome-crx.sh  sign-firefox-addon.sh  version-bump.sh
shell/: bruvtab-fzf-zsh.sh  bruvtab.sh  rofi_activate_tab.sh  rofi_close_tabs.sh
src/: main.rs
